# trajectory-planning

./: .clang-format  .gitignore  README.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md  usage_question.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_STYLE.md  DEVELOPER.md  LOCAL_CI.md  PLANNING_STRATEGIES.md  README.md  RELEASE_NOTES.md  SECURITY.md
robot_config/arm380_config/: package.xml
robot_config/arm380_config/config/: servo_parameters.yaml
robot_config/arm620_config/config/: arm620.srdf
robot_config/arm620_config/launch/: real_moveit_demo.launch.py
robot_description/: CMakeLists.txt
robot_description/launch/: robot_description.launch.py
robot_description/meshes/arm620/: Link1.STL  Link2.STL  Link3.STL  Link6.STL
robot_description/urdf/: arm380.urdf  arm620_gazebo.urdf
robot_interfaces/: CMakeLists.txt
robot_interfaces/msg/: MoveCRequest.msg  MoveCTestRequest.msg
src/robot_bringup/: package.xml
src/robot_bringup/launch/: robot_real.launch.py
src/robot_config/arm380_config/config/: kinematics.yaml
src/robot_config/arm620_config/: package.xml
src/robot_description/meshes/arm620/: Link4.STL  Link5.STL  base_link.STL
src/robot_description/urdf/: arm620.urdf
src/robot_interfaces/: package.xml
src/robot_interfaces/msg/: JointConstrainedRequest.msg  JointConstrainedTestRequest.msg  JointConstraint.msg  MoveCTestWaypoint.msg
src/trac_ik_plugin/: CMakeLists.txt  test_plugin_loading.py  trac_ik_kinematics_description.xml
src/trac_ik_plugin/src/: trac_ik_kinematics_plugin.cpp
src/trajectory_planning_bringup/: CMakeLists.txt  package.xml
src/trajectory_planning_interfaces/: package.xml
src/trajectory_planning_interfaces/msg/: JointConstrainedRequest.msg  JointConstrainedTestRequest.msg  MoveCTestRequest.msg
src/trajectory_planning_v3/: CMakeLists.txt  package.xml
src/trajectory_planning_v3/config/: joint_limits.yaml  kinematics.yaml  movec_params.yaml  moveit_controllers.yaml  movej_params.yaml  movel_params.yaml  safety_limit.yaml  trajectory_planning.yaml
src/trajectory_planning_v3/include/trajectory_planning_v3/application/services/: motion_planning_service.hpp  trajectory_execution_service.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/domain/entities/: constraint.hpp  robot_state.hpp  trajectory.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/domain/services/: kinematics_service.hpp  trajectory_control_service.hpp  trajectory_validation_service.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/domain/value_objects/: duration.hpp  end_effector_velocity.hpp  joint_acceleration.hpp  joint_position.hpp  joint_velocity.hpp  pose.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/infrastructure/adapters/: hardware_adapter.hpp  moveit_message_adapter.hpp  ros_message_adapter.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/infrastructure/controllers/: hardware_trajectory_controller.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/infrastructure/execution/: trajectory_executor.hpp
src/trajectory_planning_v3/include/trajectory_planning_v3/infrastructure/integration/: moveit_adapter.hpp
src/trajectory_planning_v3/launch/: planning_demo.launch.py
src/trajectory_planning_v3/src/application/services/: motion_planning_service.cpp  trajectory_execution_service.cpp
src/trajectory_planning_v3/src/domain/entities/: constraint.cpp  robot_state.cpp  trajectory.cpp
src/trajectory_planning_v3/src/domain/services/: kinematics_service.cpp  trajectory_control_service.cpp  trajectory_validation_service.cpp
src/trajectory_planning_v3/src/infrastructure/adapters/: hardware_adapter.cpp  moveit_message_adapter.cpp  ros_message_adapter.cpp
src/trajectory_planning_v3/src/infrastructure/controllers/: hardware_trajectory_controller.cpp
src/trajectory_planning_v3/src/infrastructure/execution/: trajectory_executor.cpp
src/trajectory_planning_v3/src/infrastructure/integration/: moveit_adapter.cpp
src/trajectory_planning_v3/src/infrastructure/planning/strategies/: joint_constrained_planning_strategy.cpp  movec_planning_strategy.cpp  movej_planning_strategy.cpp  movel_planning_strategy.cpp
src/trajectory_planning_v3/src/nodes/: hardware_trajectory_controller_node.cpp  joint_constrained_node.cpp  movec_node.cpp  movej_node.cpp  movel_node.cpp  trajectory_planning_node.cpp
src/trajectory_planning_v3/test/: hardware_adapter_test.cpp
trac_ik_plugin/: package.xml
trac_ik_plugin/include/trac_ik/: trac_ik_kinematics_plugin.hpp
trac_ik_plugin/src/: trac_ik_kinematics_plugin.cpp
trajectory_planning_bringup/launch/: trajectory_planning.launch.py
trajectory_planning_interfaces/: CMakeLists.txt
trajectory_planning_v3/: CMakeLists.txt
trajectory_planning_v3/include/trajectory_planning_v3/application/services/: motion_planning_service.hpp  trajectory_execution_service.hpp
trajectory_planning_v3/include/trajectory_planning_v3/domain/services/: kinematics_service.hpp  trajectory_control_service.hpp
trajectory_planning_v3/include/trajectory_planning_v3/domain/value_objects/: duration.hpp  end_effector_velocity.hpp  joint_velocity.hpp  pose.hpp
trajectory_planning_v3/include/trajectory_planning_v3/infrastructure/adapters/: moveit_message_adapter.hpp
trajectory_planning_v3/include/trajectory_planning_v3/infrastructure/planning/strategies/: joint_constrained_planning_strategy.hpp  movel_planning_strategy.hpp
trajectory_planning_v3/src/application/services/: motion_planning_service.cpp  trajectory_execution_service.cpp
trajectory_planning_v3/src/domain/services/: trajectory_validation_service.cpp
trajectory_planning_v3/src/infrastructure/planning/strategies/: joint_constrained_planning_strategy.cpp  movej_planning_strategy.cpp
trajectory_planning_v3/src/nodes/: joint_constrained_node.cpp  trajectory_planning_node.cpp
(+4 files in other folders)
